[tool.poetry]
name = "scraper"
version = "0.1.0"
description = ""
authors = ["seyfal <seyfal.sutanov123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.21.0"
ipykernel = "^6.29.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
